# descend

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
examples/: basic_usage.cpp
include/descend/: apply.hpp  args.hpp  chain.hpp  compose.hpp  debug.hpp  descend.hpp  error_or.hpp  finalize.hpp  generator.hpp  helpers.hpp  higher_order.hpp  iterate.hpp  stage_styles.hpp  stages.hpp
include/descend/stages/: accumulate.hpp  transform.hpp
tests/: CMakeLists.txt  test_args.cpp  test_expand.cpp  test_finalize.cpp  test_stages.cpp  test_transform_one_arg.cpp  test_type_semantics.cpp
